# metaflow

.github/workflows/: agent-build.yml
agent/.cargo/: config.toml
agent/docker/: dockerfile-build-aarch64-static-link
agent/plugins/integration_vector/: Cargo.toml  config.yaml
agent/plugins/integration_vector/src/: lib.rs  vector_app.rs  vector_component.rs  vector_config.rs
agent/src/common/: decapsulate.rs  meta_packet.rs
agent/src/config/: config.rs  handler.rs
agent/src/dispatcher/: local_multins_mode_dispatcher.rs
agent/src/flow_generator/protocol_logs/rpc/: dubbo.rs
message/: trident.proto
server/agent_config/: config.go  example.yaml
server/common/: module_shared.go
server/controller/controller/: controller.go
server/controller/db/metadb/migrator/schema/rawsql/mysql/: init.sql
server/controller/db/metadb/migrator/schema/rawsql/mysql/issu/: 7.0.1.9.sql
server/controller/db/metadb/migrator/schema/rawsql/postgres/: init.sql
server/controller/db/metadb/model/: model.go  platform_rsc_model.go
server/controller/genesis/grpc/: server.go
server/controller/grpc/synchronizer/: service.go
server/controller/http/: server.go
server/controller/http/service/: debug.go
server/controller/manager/: task.go
server/controller/recorder/: domain.go
server/controller/recorder/cache/tool/: data_set.go
server/controller/tagrecorder/: dictionary.go
server/ingester/ckissu/: ckissu.go
server/ingester/ingester/: org_handler.go
server/ingester/pkg/ckwriter/: ckwriter.go
server/libs/nativetag/: nativetag.go
server/querier/engine/clickhouse/: clickhouse.go
server/querier/engine/clickhouse/metrics/: metrics.go
server/querier/engine/clickhouse/tag/: description.go
